# Sector-Monitor

./: .gitignore  CMakeLists.txt  CsvReader.cpp  CsvReader.h  IssueSeveritiy.h  Monitor.cpp  Monitor.h  README.md  Report.h  Sector-Monitor.cpp  Sector-Monitor.sln  Sector-Monitor.vcxproj  Sector-Monitor.vcxproj.filters  Sector.h  SectorSnapshot.h  launch.vs.json  sector.csv  sectors.csv  vcpkg.json
src/: IssueSeveritiy.cpp  Monitor.cpp  Report.cpp  Sector.cpp
